Broke up flight index into partials, added form flight_choice for use after Bookings is created

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -9,27 +9,8 @@
 <body>
   <h1>Available Flights</h1>
 
-  <%= form_with(url: root_path, method: :get) do |f| %>
-    <label for='departure_airport_id'>From: </label>
-    <%= select_tag('departure_airport_id', options_for_select(@airport_options)) %>
+  <%= render "flight_finder" %>
 
-    <label for='arrival_airport_id'>To: </label>
-    <%= select_tag('arrival_airport_id', options_for_select(@airport_options)) %>
-
-    <label for='number_of_passengers'>Number of Passengers: </label>
-    <%= select_tag('number_of_passengers', options_for_select([['1', 1], ['2', 2], ['3', 3], ['4', 4]])) %>
-
-    <label for='flight_date'>Date: </label>
-    <%= select_tag('flight_date', options_for_select(@flight_date_options)) %>
-
-    <%= f.submit "Search" %>
-  <% end %>
-
-    <% @searched_flights.each do |flight| %>
-      <p>Departing from: <%= flight.departure_airport_id %></p>
-      <p>Going to: <%= flight.arrival_airport_id %></p>
-      <p>Duration: <%= flight.duration %> hours</p>
-      <p>Date: <%= flight.date %></p>
-    <% end %>
+  <%= render "flight_choice" %>
 </body>
 </html>
